--- a/image_codec_proxy.ipynb
+++ b/image_codec_proxy.ipynb
@@ -36,7 +36,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -q mediapy"
+        "!pip install -q mediapy tensorflow-datasets==4.9.4"
       ],
       "metadata": {
         "id": "9Kokryv7CCXF"
@@ -47,8 +47,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/google/sandwiched_compression\n",
-        "!mv sandwiched_compression/* ."
+        "!if [ ! -f compress_intra_model.py ]; then \\\n",
+        "  git clone https://github.com/google/sandwiched_compression; \\\n",
+        "  mv sandwiched_compression/* .; \\\n",
+        "fi"
       ],
       "metadata": {
         "id": "g22K3JXviIsN"
