--- a/sandwich_video_compression_lowres_codec.ipynb
+++ b/sandwich_video_compression_lowres_codec.ipynb
@@ -3,40 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [
-        {
-          "file_id": "1dTRCtMnCZnPh5w-ox_orGqnjUAiWUiim",
-          "timestamp": 1732816915065
-        },
-        {
-          "file_id": "1CwRNgvxELiiAmaA51_6K6WGiZMVbThPo",
-          "timestamp": 1731667911270
-        },
-        {
-          "file_id": "138emgAXqYsrj2cMwL_-UKmM0kg0iEDDB",
-          "timestamp": 1731665999382
-        },
-        {
-          "file_id": "1qGo65QqY-wV0COZOKNFu-shGUw9PfSK5",
-          "timestamp": 1723068330322
-        },
-        {
-          "file_id": "17_-XcJpn3e5BeVZ3SFS0SyVQolMM-33R",
-          "timestamp": 1716231205809
-        },
-        {
-          "file_id": "1RfHA6HxsDpYmF2ONhOROs9ksmq0XHfzg",
-          "timestamp": 1704305895835
-        },
-        {
-          "file_id": "1KgOczsvU9y25zQ63iPxEceiJBMoSKU6B",
-          "timestamp": 1695330267271
-        }
-      ],
-      "last_runtime": {
-        "build_target": "//learning/grp/tools/ml_python/gpu:ml_notebook",
-        "kind": "private"
-      },
+      "provenance": [],
       "toc_visible": true
     },
     "kernelspec": {
@@ -274,7 +241,7 @@
         "    checkpoint_manager.save(checkpoint_number=optimizer.iterations.numpy())\n",
         "\n",
         "  epoch += 1\n",
-        "  epoch_stat.reset_states()"
+        "  epoch_stat.reset_state()"
       ],
       "metadata": {
         "id": "TM6m8PvDCfpW"
@@ -417,16 +384,6 @@
         "id": "tXkkRZGoU0a6",
         "colab": {
           "height": 1000
-        },
-        "executionInfo": {
-          "status": "ok",
-          "timestamp": 1732751334749,
-          "user_tz": 480,
-          "elapsed": 143571,
-          "user": {
-            "displayName": "Onur Guleryuz",
-            "userId": "01970413655509450458"
-          }
         },
         "outputId": "82e923cd-4492-46e5-d76b-f9eaed003602"
       },
